Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7
-
None
-
20fe11bde (dev), 579b29889 (6.7)
Description
When running various KDE applications I get
"QWaylandTextInputV3: Input protocol "text-input-unstable-v3" does not support querying input direction. Use qt-text-input-method-unstable-v1 instead for full support of Qt input method events."
printed at runtime, sometimes several times.
At minimum the warning should only be printed once.
The warning is also inactionable to me, because qt-text-input-method-unstable-v1 is not supported by any desktop compositor, so using text-input v2/v3 are the only available options
Attachments
For Gerrit Dashboard: QTBUG-120171 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
526070,3 | Remove inactionable warnings suggesting qt-text-input-method-unstable-v1 | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
526181,2 | Remove inactionable warnings suggesting qt-text-input-method-unstable-v1 | 6.7 | qt/qtwayland | Status: MERGED | +2 | 0 |