Remove inactionable warnings suggesting qt-text-input-method-unstable-v1

These warnings can appear several times during the program execution,
spamming the log.

They are also inactionable for desktop use cases, since
qt-text-input-method-unstable-v1 is not a protocol implemented by any
desktop compositor.

Fixes: QTBUG-120171
Pick-to: 6.7
Change-Id: Icd5316000b43e4b16e1eaff9efcc0c363458b9af
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>